--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".AnswerActivity"
+            android:parentActivityName=".CalculatorActivity"
+            android:label="@string/resultTitle">
+        </activity>
+
     </application>
 
 </manifest>
